tests/data/syntax-errors/mismatched-angle-brackets.star
Origin default (0,0,0)
  Parameter "n" <0,0,1
    initialize
      string "no"
